Fix overflow

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ Tags:
 
 /* Positioning */
 
-html { font-family: sans-serif, tahoma, verdana, arial; font-size: 13px; overflow: auto; }
-body { width: 1024px; margin: 12px auto; padding: 5px; }
+html { font-family: sans-serif, tahoma, verdana, arial; font-size: 13px; overflow: hidden; }
+body { width: 1024px; margin: 12px auto; padding: 5px; overflow-y: auto; }
 
 header { clear: both; margin-bottom: 5px; width: 160px; text-align: center; overflow: hidden; margin-bottom: 20px; }
 header h1 { margin: 0px; }
@@ -25,7 +25,7 @@ aside li { list-style: none; font-size: 1.30em; padding: 5px 0px; }
 
 header a,aside a,footer a { color: #000; text-decoration: none; }
 
-#main { width: 805px; max-height: 425px; float: right; margin-bottom: 25px; padding: 15px; }
+#main { width: 805px; max-height: 425px; float: right; margin-bottom: 25px; padding: 15px; overflow-y: auto; }
 #main img,#main iframe { opacity: 1; }
 #main p { margin: 0px; }
 #main .content>div { width: 50%; }
